# Matrix-Centric-K-Means

./: CMakeLists.txt  TODO.md
experiments/: driver.m  driver.py  knKmeans.m  plot.py  plot.sbatch  raft.sh  read_libsvm.m  run-one.sbatch  run.sbatch  trial.py
experiments/.ipynb_checkpoints/: plot-checkpoint.py
experiments/dlib-bench/: ArgParse.hpp  Makefile  dlib_driver.cpp
experiments/fractus/: cuml-kmeans-n1000-k10.pkl  cuml-kmeans-n100000-k1000.pkl  cuml-kmeans-n100000-k10000.pkl  mtx-kmeans-2-n1000-k10.pkl  mtx-kmeans-2-n1000-k100.pkl  mtx-kmeans-2-n100000-k1000.pkl  mtx-kmeans-2-n100000-k10000.pkl  mtx-kmeans-spmm-n1000-k10.pkl  mtx-kmeans-spmm-n100000-k1000.pkl  mtx-kmeans-spmm-n100000-k10000.pkl  shuffle-kmeans-n1000-k10.pkl  shuffle-kmeans-n100000-k1000.pkl  shuffle-kmeans-n100000-k10000.pkl
experiments/perlmutter/: cuml-kmeans-n1000-k10.pkl  cuml-kmeans-n100000-k1000.pkl  cuml-kmeans-n100000-k10000.pkl  distances-mtx-kmeans-arizona-n1000-k10.pkl  distances-mtx-kmeans-arizona-n100000-k1000.pkl  distances-mtx-kmeans-arizona-n100000-k10000.pkl  distances-mtx-kmeans-spmm-n1000-k10.pkl  distances-mtx-kmeans-spmm-n100000-k1000.pkl  distances-mtx-kmeans-spmm-n100000-k10000.pkl  distances-pytorch-n100000-k10000.pkl  mtx-kmeans-2-n1000-k10.pkl  mtx-kmeans-2-n100000-k1000.pkl  mtx-kmeans-2-n100000-k10000.pkl  mtx-kmeans-arizona-n1000-k10.pkl  mtx-kmeans-arizona-n100000-k1000.pkl  mtx-kmeans-arizona-n100000-k10000.pkl  mtx-kmeans-spmm-n1000-k10.pkl  mtx-kmeans-spmm-n100000-k1000.pkl  mtx-kmeans-spmm-n100000-k10000.pkl  pytorch-kmeans-n1000-k10.pkl  pytorch-kmeans-n10000-k100.pkl  shuffle-kmeans-n1000-k10.pkl  shuffle-kmeans-n100000-k1000.pkl  shuffle-kmeans-n100000-k10000.pkl
experiments/raft-bench/: CMakeLists.txt
experiments/raft-bench/src/: .kmeans.cu.swp  kmeans.cu
nsight_profiling/GPU_Kmeans/perlmutter/: gemm-profile.ncu-rep
py_utils/: scatter_plot.py
src/: CMakeLists.txt  cuda_utils.cu  cuda_utils.cuh  kmeans.cu  kmeans.cuh  main.cu
src/include/: common.h  input_parser.hpp  point.hpp  utils.hpp
src/kernels/: argmin.cu  centroids.cu  convergence.cu  distances.cu  kernel_functions.cu  kernel_functions.cuh  kernels.cuh
tests/: CMakeLists.txt  unit_kernels.cu
